--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <meta property="og:title" content="Color Picker" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tchin8.github.io/Color-Picker/" />
-    <meta property="og:image" content="https://tchin8.github.io/Color-Picker/public/demo.gif" />
+    <meta property="og:image" content="https://tchin8.github.io/Color-Picker/demo.gif" />
   </head>
   <body>
     <div id="root"></div>
