--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,10 @@
     <link rel="stylesheet" type="text/css" href="./stylesheets/reset.css">
     <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css">
     <title>Color Finder</title>
-    <meta property="og:title" content="Color Picker" />
+    <meta property="og:title" content="Color Finder" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tchin8.github.io/Color-Picker/" />
-    <meta property="og:image" content="https://tchin8.github.io/Color-Picker/demo.gif" />
+    <meta property="og:url" content="https://tchin8.github.io/Color-Finder/" />
+    <meta property="og:image" content="https://tchin8.github.io/Color-Finder/demo.gif" />
   </head>
   <body>
     <div id="root"></div>
